tests/rosetta/transpiler/Clojure/cartesian-product-of-two-or-more-lists-4.error
run error: exit status 1
Execution error (IndexOutOfBoundsException) at main/cartN (cartesian-product-of-two-or-more-lists-4.clj:27).
null

Full report at:
/tmp/clojure-7895318915016010226.edn
